improve login page

--- a/Static_Dev/pages-login.html
+++ b/Static_Dev/pages-login.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card card-inverse card-primary p-y-3" style="width:44%">
+                    <div class="card card-inverse card-primary p-y-3 hidden-md-down" style="width:44%">
                         <div class="card-block text-xs-center">
                             <div>
                                 <h2>Sign up</h2>
