--- a/Static_Full_Project_GULP/components-cards.html
+++ b/Static_Full_Project_GULP/components-cards.html
@@ -208,7 +208,6 @@
         <div class="container-fluid">
             <div class="animated fadeIn">
                 <div class="row">
-
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -220,8 +219,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-block">
@@ -231,25 +229,7 @@
                             <div class="card-footer">Card footer</div>
                         </div>
                     </div>
-                    <!--/col-->
-
-                    <div class="col-sm-6 col-md-4">
-                        <div class="card card-default">
-                            <div class="card-header">
-                                Card collapse
-                                <div class="card-actions">
-                                    <a class="btn-minimize collapsed" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="icon-arrow-down"></i></a>
-                                    <a class="btn-close" href="#"><i class="icon-close"></i></a>
-                                </div>
-                            </div>
-                            <div class="card-block collapse" id="collapseExample">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
-                                ea commodo consequat.
-                            </div>
-                        </div>
-                    </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -261,8 +241,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -279,8 +258,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -293,8 +271,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -307,13 +284,161 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                 </div>
-                <!--/row-->
+                <!--/.row-->
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-primary">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-secondary">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-success">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-info">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-warning">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-outline-danger">
+                            <div class="card-header">
+                                Card outline
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                </div>
+                <!--/.row-->
 
                 <div class="row">
-
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-primary">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-secondary">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-success">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-info">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-warning">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card card-accent-danger">
+                            <div class="card-header">
+                                Card with accent
+                            </div>
+                            <div class="card-block">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.col-->
+                </div>
+                <!--/.row-->
+                <div class="row">
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-primary text-xs-center">
                             <div class="card-block">
@@ -326,8 +451,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-success text-xs-center">
                             <div class="card-block">
@@ -340,8 +464,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-info text-xs-center">
                             <div class="card-block">
@@ -354,8 +477,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-warning text-xs-center">
                             <div class="card-block">
@@ -368,8 +490,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-danger text-xs-center">
                             <div class="card-block">
@@ -382,8 +503,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-primary text-xs-center">
                             <div class="card-block">
@@ -396,13 +516,10 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                 </div>
-                <!--/row-->
-
+                <!--/.row-->
                 <div class="row">
-
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-primary">
                             <div class="card-header">
@@ -414,8 +531,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-success">
                             <div class="card-header">
@@ -427,8 +543,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-info">
                             <div class="card-header">
@@ -440,8 +555,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-warning">
                             <div class="card-header">
@@ -453,8 +567,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                     <div class="col-sm-6 col-md-4">
                         <div class="card card-inverse card-danger">
                             <div class="card-header">
@@ -466,10 +579,9 @@
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
+                    <!--/.col-->
                 </div>
-                <!--/row-->
+                <!--/.row-->
             </div>
 
         </div>
