Dashboard, Charts and widgets

--- a/Aurelia_Full_Esnext_Webpack/src/modules/dashboard/dashboard.html
+++ b/Aurelia_Full_Esnext_Webpack/src/modules/dashboard/dashboard.html
@@ -113,35 +113,9 @@
                 </div>
                 <!--/.row-->
                 <hr class="mt-0">
-                <ul class="horizontal-bars type-2" ng-controller="horizontalBarsType2Ctrl">
-                  <li ng-repeat="row in gender">
-                    <i ng-class="row.icon"></i>
-                    <span class="title">{{ row.title }}</span>
-                    <span class="value">{{ row.value }}%</span>
-                    <div class="bars">
-                      <progress class="progress progress-xs progress-warning m-0" value="{{ row.value }}" max="100">{{
-                        row.value }}%
-                      </progress>
-                    </div>
-                  </li>
-                  <li class="divider"></li>
-                  <li ng-repeat="row in source">
-                    <i ng-class="row.icon"></i>
-                    <span class="title">{{ row.title }}</span>
-                                    <span class="value">{{ row.value | number }}
-                                        <span class="text-muted small">({{ row.percent }}%)</span>
-                                    </span>
-                    <div class="bars">
-                      <progress class="progress progress-xs progress-success m-0" value="{{ row.percent }}" max="100">{{
-                        row.percent }}%
-                      </progress>
-                    </div>
-                  </li>
-                  <li class="divider text-xs-center">
-                    <button type="button" class="btn btn-sm btn-link text-muted" data-toggle="tooltip"
-                            data-placement="top" title="show more"><i class="icon-options"></i>
-                    </button>
-                  </li>
+                <require from="./horizontal-bars2"></require>
+                <ul class="horizontal-bars type-2" as-element="horizontal-bars2">
+
                 </ul>
               </div>
               <!--/.col-->
@@ -297,59 +271,9 @@
                 <th>Activity</th>
               </tr>
               </thead>
-              <tbody ng-controller="usersTableCtrl">
-              <tr ng-repeat="user in users">
-                <td class="text-xs-center">
-                  <div class="avatar">
-                    <img ng-src="img/avatars/{{ user.avatar }}" class="img-avatar" alt="admin@bootstrapmaster.com">
-                                        <span class="avatar-status" ng-class="{ 'tag-success' : user.status == 'active',
-                                                                                'tag-warning' : user.status == 'away',
-                                                                                'tag-danger'  : user.status == 'busy',
-                                                                                'tag-default' : user.status == 'offline' }"></span>
-                  </div>
-                </td>
-                <td>
-                  <div>{{ user.name }}</div>
-                  <div class="small text-muted">
-                    <span ng-if="user.new == true">New</span>
-                    <span ng-if="user.new == false">Recurring</span>
-                    | Registered: {{ user.registered }}
-                  </div>
-                </td>
-                <td class="text-xs-center">
-                  <img ng-src="img/flags/{{ user.flag }}" alt="{{ user.country }}" style="height:24px;">
-                </td>
-                <td>
-                  <div class="clearfix">
-                    <div class="float-xs-left">
-                      <strong>{{ user.usage }}%</strong>
-                    </div>
-                    <div class="float-xs-right">
-                      <small class="text-muted">{{ user.period }}</small>
-                    </div>
-                  </div>
-                  <progress class="progress progress-xs" ng-class="{ 'progress-info'    : user.usage <= 25,
-                                                          'progress-success' : user.usage > 25 && user.usage <= 50,
-                                                          'progress-warning' : user.usage > 50 && user.usage <= 75,
-                                                          'progress-danger'  : user.usage > 75 && user.usage <= 100 }"
-                            value="{{ user.usage }}" max="100" style="margin:5px 0 0 0;">{{ user.usage }}%
-                  </progress>
-                </td>
-                <td class="text-xs-center">
-                  <i class="fa" ng-class="{ 'fa-cc-mastercard' : user.payment == 'mastercard',
-                                                   'fa-cc-visa' : user.payment == 'visa',
-                                                   'fa-cc-amex' : user.payment == 'amex',
-                                                   'fa-cc-diners-club' : user.payment == 'diners',
-                                                   'fa-cc-stripe' : user.payment == 'stripe',
-                                                   'fa-paypal' : user.payment == 'paypal',
-                                                   'fa-google-wallet' : user.payment == 'google' }"
-                     style="font-size:24px"></i>
-                </td>
-                <td>
-                  <div class="small text-muted">Last login</div>
-                  <strong>{{ user.activity }}</strong>
-                </td>
-              </tr>
+              <require from="./users-table"></require>
+              <tbody as-element="users-table">
+
               </tbody>
             </table>
           </div>
