--- a/Aurelia_Full_Esnext_Webpack/src/common/navbar.html
+++ b/Aurelia_Full_Esnext_Webpack/src/common/navbar.html
@@ -9,7 +9,7 @@
         </li>
 
         <li class="nav-item px-1">
-          <a class="nav-link" route-href="route: dashboard;">Töölaud</a>
+          <a class="nav-link" route-href="route: dashboard;">Dashboard</a>
         </li>
         <li class="nav-item px-1">
           <a class="nav-link" route-href="route: user;">Users</a>
