Enable bootstrap 4 theme. Fix #88

--- a/Angular2_CLI_Full_Project/src/index.html
+++ b/Angular2_CLI_Full_Project/src/index.html
@@ -41,6 +41,11 @@
 -->
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+    <!-- Enable bootstrap 4 theme -->
+    <script>
+        window.__theme = 'bs4';
+    </script>
+
     <!-- App Loading... -->
 </body>
 
