--- a/Angular2_CLI_Starter/src/index.html
+++ b/Angular2_CLI_Starter/src/index.html
@@ -41,6 +41,10 @@
 -->
 
 <body class="app">
+    <!-- Enable bootstrap 4 theme -->
+    <script>
+        window.__theme = 'bs4';
+    </script>
     <!-- App Loading... -->
 </body>
 
