--- a/Static_Full_Project_GULP/components-modals.html
+++ b/Static_Full_Project_GULP/components-modals.html
@@ -46,7 +46,7 @@
 3. '.aside-menu-off-canvas'	- Off Canvas Aside Menu
 
 // Footer options
-1. 'footer-fixed'						- Fixed footer
+1. '.footer-fixed'						- Fixed footer
 
 -->
 
