--- a/Static_Full_Project_GULP/components-tabs.html
+++ b/Static_Full_Project_GULP/components-tabs.html
@@ -39,6 +39,7 @@
 2. '.sidebar-hidden'				- Hidden Sidebar
 3. '.sidebar-off-canvas'		- Off Canvas Sidebar
 4. '.sidebar-minimized'			- Minimized Sidebar (Only icons)
+5. '.sidebar-compact'			  - Compact Sidebar
 
 // Aside options
 1. '.aside-menu-fixed'			- Fixed Aside Menu
