--- a/Vue_Full_Project/index.html
+++ b/Vue_Full_Project/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CoreUI - Open Source Bootstrap Admin Template</title>
 
     <!-- Icons -->
