--- a/Vue_Starter/index.html
+++ b/Vue_Starter/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CoreUI - Open Source Bootstrap Admin Template</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CoreUI - Open Source Bootstrap Admin Template</title>
 
