--- a/Static_Full_Project_GULP/icons-font-awesome.html
+++ b/Static_Full_Project_GULP/icons-font-awesome.html
@@ -9,7 +9,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,7 +16,6 @@
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
     <link rel="shortcut icon" href="img/favicon.png">
-
     <title>CoreUI - Open Source Bootstrap Admin Template</title>
 
     <!-- Icons -->
@@ -26,7 +24,6 @@
 
     <!-- Main styles for this application -->
     <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <!-- BODY options, add following classes to body to change options
@@ -46,8 +43,11 @@
 2. '.aside-menu-hidden'			- Hidden Aside Menu
 3. '.aside-menu-off-canvas'	- Off Canvas Aside Menu
 
+// Breadcrumb options
+1. '.breadcrumb-fixed'			- Fixed Breadcrumb
+
 // Footer options
-1. '.footer-fixed'						- Fixed footer
+1. '.footer-fixed'					- Fixed footer
 
 -->
 
@@ -55,11 +55,9 @@
     <header class="app-header navbar">
         <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">☰</button>
         <a class="navbar-brand" href="#"></a>
-        <ul class="nav navbar-nav d-md-down-none">
-            <li class="nav-item">
-                <a class="nav-link navbar-toggler sidebar-toggler" href="#">☰</a>
-            </li>
+        <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button">☰</button>
 
+        <ul class="nav navbar-nav d-md-down-none">
             <li class="nav-item px-3">
                 <a class="nav-link" href="#">Dashboard</a>
             </li>
@@ -86,20 +84,16 @@
                     <span class="d-md-down-none">admin</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
-
                     <div class="dropdown-header text-center">
                         <strong>Account</strong>
                     </div>
-
                     <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>
                     <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">42</span></a>
                     <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a>
                     <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comments<span class="badge badge-warning">42</span></a>
-
                     <div class="dropdown-header text-center">
                         <strong>Settings</strong>
                     </div>
-
                     <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
                     <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Settings</a>
                     <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-default">42</span></a>
@@ -109,11 +103,9 @@
                     <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
                 </div>
             </li>
-            <li class="nav-item d-md-down-none">
-                <a class="nav-link navbar-toggler aside-menu-toggler" href="#">☰</a>
-            </li>
-
+            <button class="navbar-toggler aside-menu-toggler d-md-down-none" type="button">☰</button>
         </ul>
+
     </header>
 
     <div class="app-body">
@@ -121,7 +113,7 @@
             <nav class="sidebar-nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+                        <a class="nav-link" href="index.html"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-primary">NEW</span></a>
                     </li>
 
                     <li class="nav-title">
@@ -168,7 +160,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="widgets.html"><i class="icon-calculator"></i> Widgets <span class="badge badge-info">NEW</span></a>
+                        <a class="nav-link" href="widgets.html"><i class="icon-calculator"></i> Widgets <span class="badge badge-primary">NEW</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="charts.html"><i class="icon-pie-chart"></i> Charts</a>
@@ -211,10 +203,10 @@
 
                 <!-- Breadcrumb Menu-->
                 <li class="breadcrumb-menu d-md-down-none">
-                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                        <a class="btn btn-secondary" href="#"><i class="icon-speech"></i></a>
-                        <a class="btn btn-secondary" href="./"><i class="icon-graph"></i> &nbsp;Dashboard</a>
-                        <a class="btn btn-secondary" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
+                    <div class="btn-group" role="group" aria-label="Button group">
+                        <a class="btn" href="#"><i class="icon-speech"></i></a>
+                        <a class="btn" href="./"><i class="icon-graph"></i> &nbsp;Dashboard</a>
+                        <a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
                     </div>
                 </li>
             </ol>
@@ -224,7 +216,7 @@
                 <div class="animated fadeIn">
                     <div class="card" id="new">
                         <div class="card-header">20 New Icons in 4.5</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -334,7 +326,7 @@
 
                     <div class="card" id="web-application">
                         <div class="card-header">Web Application Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2362,7 +2354,7 @@
 
                     <div class="card" id="hand">
                         <div class="card-header">Hand Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2459,7 +2451,7 @@
 
                     <div class="card" id="transportation">
                         <div class="card-header">Transportation Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2555,7 +2547,7 @@
 
                     <div class="card" id="gender">
                         <div class="card-header">Gender Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2635,7 +2627,7 @@
 
                     <div class="card" id="file-type">
                         <div class="card-header">File Type Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2739,7 +2731,7 @@
 
                     <div class="card" id="spinner">
                         <div class="card-header">Spinner Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="alert alert-success">
                                 <ul class="fa-ul">
                                     <li>
@@ -2783,7 +2775,7 @@
 
                     <div class="card" id="form-control">
                         <div class="card-header">Form Control Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2847,7 +2839,7 @@
 
                     <div class="card" id="payment">
                         <div class="card-header">Payment Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2916,7 +2908,7 @@
 
                     <div class="card" id="chart">
                         <div class="card-header">Chart Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -2951,7 +2943,7 @@
 
                     <div class="card" id="currency">
                         <div class="card-header">Currency Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3103,7 +3095,7 @@
 
                     <div class="card" id="text-editor">
                         <div class="card-header">Text Editor Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3366,7 +3358,7 @@
 
                     <div class="card" id="directional">
                         <div class="card-header">Directional Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3644,7 +3636,7 @@
 
                     <div class="card" id="video-player">
                         <div class="card-header">Video Player Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -3758,7 +3750,7 @@
 
                     <div class="card" id="brand">
                         <div class="card-header">Brand Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="alert alert-warning">
                                 <h4><i class="fa fa-warning"></i> Warning!</h4>
                                 Apparently, Adblock Plus can remove Font Awesome brand icons with their "Remove Social Media Buttons" setting. We will not use hacks to force them to display. Please
@@ -4567,7 +4559,7 @@
 
                     <div class="card" id="medical">
                         <div class="card-header">Medical Icons</div>
-                        <div class="card-block">
+                        <div class="card-body">
                             <div class="row text-center">
 
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -4650,7 +4642,7 @@
             <!-- Tab panes -->
             <div class="tab-content">
                 <div class="tab-pane active" id="timeline" role="tabpanel">
-                    <div class="callout m-0 py-2 text-muted text-center bg-faded text-uppercase">
+                    <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
                         <small><b>Today</b>
                         </small>
                     </div>
@@ -4677,7 +4669,7 @@
                         <small class="text-muted"><i class="icon-social-skype"></i>&nbsp; On-line</small>
                     </div>
                     <hr class="transparent mx-3 my-0">
-                    <div class="callout m-0 py-2 text-muted text-center bg-faded text-uppercase">
+                    <div class="callout m-0 py-2 text-muted text-center bg-light text-uppercase">
                         <small><b>Tomorrow</b>
                         </small>
                     </div>
