--- a/Static_Full_Project_GULP/pages-register.html
+++ b/Static_Full_Project_GULP/pages-register.html
@@ -34,7 +34,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mx-4">
-                    <div class="card-block p-4">
+                    <div class="card-body p-4">
                         <h1>Register</h1>
                         <p class="text-muted">Create your account</p>
                         <div class="input-group mb-3">
