update to latest version of bootstrap

--- a/Angular4_CLI_Full_Project/src/index.html
+++ b/Angular4_CLI_Full_Project/src/index.html
@@ -35,6 +35,9 @@
 2. '.aside-menu-hidden'			- Hidden Aside Menu
 3. '.aside-menu-off-canvas'	- Off Canvas Aside Menu
 
+// Breadcrumb options
+1. '.breadcrumb-fixed'			- Fixed Breadcrumb
+
 // Footer options
 1. 'footer-fixed'						- Fixed footer
 
